add in search on voice picker

--- a/Echo/Localizable.xcstrings
+++ b/Echo/Localizable.xcstrings
@@ -860,7 +860,7 @@
     "Scanning speed" : {
       "comment" : "Slider label to control the speed of scanning"
     },
-    "Search by language or name" : {
+    "Search by voice name or language" : {
 
     },
     "Select" : {
