--- a/Echo/Localizable.xcstrings
+++ b/Echo/Localizable.xcstrings
@@ -16,6 +16,16 @@
     "%@" : {
 
     },
+    "%@%% / %@%%" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@%% / %2$@%%"
+          }
+        }
+      }
+    },
     "%@s / %@s" : {
       "localizations" : {
         "en" : {
